--- a/front-end-mean/src/app/utilisateur/liste-utilisateur/liste-utilisateur.component.html
+++ b/front-end-mean/src/app/utilisateur/liste-utilisateur/liste-utilisateur.component.html
@@ -1,1 +1,4 @@
 <p>liste-utilisateur works!</p>
+<mat-paginator [length]="3" [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+
+<mat-paginator [length]="3" [pageSizeOptions]="[5, 10, 25, 100]" (page)="onPageChange($event)"></mat-paginator>
