--- a/front-end-mean/src/app/template/footer/footer.component.html
+++ b/front-end-mean/src/app/template/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer class="main-footer text-center">
   <p><strong>Andriatsialonina Eric Georges Lova</strong></p>
-  <p><strong>Hasina Ramamonjisoaniaina</strong></p>
+  <p><strong>Ramamonjisoaniaina Hasina Fitiavana</strong></p>
 </footer>
