--- a/front-end-mean/src/app/identification-utilisateur/login/login.component.html
+++ b/front-end-mean/src/app/identification-utilisateur/login/login.component.html
@@ -7,8 +7,9 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="assets/img/logo.png" alt="">
+                <a href="#" class="logo d-flex align-items-center w-auto">
+                  <img src="assets/dist/img/salon-de-beaute.png" alt="salon-de-beaute Logo" style="opacity: .8; fill: white !important;"
+         height="50" width="50">
                   <span class="d-none d-lg-block">NiceAdmin</span>
                 </a>
               </div><!-- End Logo -->
@@ -17,15 +18,15 @@
 
                 <div class="card-body">
 
-                  <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">Login</h5>
-                    <!-- <p class="text-center small">Enter your username & password to login</p> -->
-                  </div>
 
                   <form class="row g-3 needs-validation" 
                     #f="ngForm"
                     (ngSubmit)="f.form.valid && onSubmit()">
 
+                    <div class="col-12 d-flex justify-content-center">
+                      <h5 class="card-title text-center pb-0 fs-4">Login</h5>
+                      <!-- <p class="text-center small">Enter your username & password to login</p> -->
+                    </div>
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Username</label>
                       <div class="input-group has-validation">
@@ -48,7 +49,17 @@
                       </div>
                     </div> -->
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Login</button>
+                      <p class="small mb-0 text-danger">{{messageErreur}} </p>
+                    </div>
+                    <div class="col-12 mt-3">
+                      <button class="btn btn-primary w-100" type="submit">
+                        
+                        <!-- <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
+                        </div> -->
+                        
+                        <span class="spinner-border spinner-border-sm" *ngIf="loading"></span>
+                        Login
+                      </button>
                     </div>
                     <div class="col-12">
                       <p class="small mb-0"><a href="inscription">Créer un compte</a></p>
