--- a/front-end-mean/src/app/pages/services/modifier-services/modifier-services.component.html
+++ b/front-end-mean/src/app/pages/services/modifier-services/modifier-services.component.html
@@ -21,24 +21,24 @@
 
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">Ajouter un nouveau service</h3>
+          <h3 class="card-title">Modifier le service {{serviceModifie._id}}</h3>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
 
-          <form novalidate #f="ngForm" (ngSubmit)="f.form.valid && ajouterService()">
+          <form novalidate #f="ngForm" (ngSubmit)="f.form.valid && modifierService()">
             <div class="row">
               <div class="col-sm-6">
                 <!-- text input -->
                 <div class="form-group">
                   <label>Nom</label>
-                  <input type="text" name="nom" class="form-control" ngModel required [(ngModel)]="nouveauService.nom" #nom="ngModel">
+                  <input type="text" name="nom" class="form-control" ngModel required [(ngModel)]="serviceModifie.nom" value="{{serviceModifie.nom}}" #nom="ngModel">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
                   <label>Prix</label>
-                  <input type="number" step="0.01" name="prix" class="form-control" ngModel required [(ngModel)]="nouveauService.prix" #prix="ngModel">
+                  <input type="number" step="0.01" name="prix" class="form-control" ngModel required [(ngModel)]="serviceModifie.prix" value="{{serviceModifie.prix}}" #prix="ngModel">
                 </div>
               </div>
             </div>
@@ -47,18 +47,18 @@
                 <!-- textarea -->
                 <div class="form-group">
                   <label>Durée</label>
-                  <input type="number" step="0.01" name="duree" class="form-control" ngModel required [(ngModel)]="nouveauService.duree" #duree="ngModel">
+                  <input type="number" step="0.01" name="duree" class="form-control" ngModel required [(ngModel)]="serviceModifie.duree" value="{{serviceModifie.duree}}" #duree="ngModel">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
                   <label>Commission</label>
-                  <input type="number" step="0.01" name="commission" class="form-control" ngModel required [(ngModel)]="nouveauService.commission" #commission="ngModel">
+                  <input type="number" step="0.01" name="commission" class="form-control" ngModel required [(ngModel)]="serviceModifie.commission" value="{{serviceModifie.commission}}" #commission="ngModel">
                 </div>
               </div>
             </div>
             <div class="row justify-content-center">
-              <app-drag-and-drop (fileUploaded)="handleFileUpload($event)" *ngIf="!nouveauService.image"></app-drag-and-drop>
+              <app-drag-and-drop (fileUploaded)="handleFileUpload($event)" *ngIf="!serviceModifie.image"></app-drag-and-drop>
             </div>
             <button type="submit" class="btn btn-primary">Ajouter</button>
           </form>
