--- a/front-end-mean/src/app/pages/services/modifier-services/modifier-services.component.html
+++ b/front-end-mean/src/app/pages/services/modifier-services/modifier-services.component.html
@@ -60,7 +60,7 @@
             <div class="row justify-content-center">
               <app-drag-and-drop (fileUploaded)="handleFileUpload($event)" *ngIf="!serviceModifie.image"></app-drag-and-drop>
             </div>
-            <button type="submit" class="btn btn-primary">Ajouter</button>
+            <button type="submit" class="btn btn-primary">Modifier</button>
           </form>
         </div>
         <!-- /.card-body -->
