--- a/front-end-mean/src/app/pages/clients/ajouter-produit-favoris/ajouter-produit-favoris.component.html
+++ b/front-end-mean/src/app/pages/clients/ajouter-produit-favoris/ajouter-produit-favoris.component.html
@@ -18,31 +18,28 @@
     </div>
     <section class="content">
       <div class="container-fluid">
-  
-        <h1>Historique</h1>
-        <div *ngIf="!loading" >
-          <div
-          *ngFor="let value of listeHistoriqueRendezVous">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">Service Favoris</h3>
-            </div>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-6">
-                  <p><strong>Nom Service:</strong>{{value.nom}}</p>
-                  <p><strong>Durée:</strong> {{value.duree}}</p>
-                  <p><strong>Prix:</strong> {{value.prix}}</p>
+        <div class="container py-5" *ngIf="!loading">
+          <h1 class="text-center">Ajouter Service Favoris</h1>
+
+          <div class="row row-cols-1 row-cols-md-3 g-4 py-5"  >
+
+            <div class="col" *ngFor="let value of listeHistoriqueRendezVous">
+              <div class="card">
+                <img src="assets/dist/img/pas_image.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">{{value.nom}}</h5>
+                  <p class="card-text">Cette service va durée {{value.duree}}</p>
                 </div>
-                <div class="col-6">
-                    <button class="btn btn-primary" (click)="ajouterFavoris(value._id)">Ajouter au favoris</button>
+                <div class="mb-5 d-flex justify-content-around">
+                  <h3>{{value.prix}}</h3>
+                  <button class="btn btn-primary" (click)="ajouterFavoris(value._id)">Favoris</button>
                 </div>
               </div>
             </div>
+
           </div>
         </div>
-  
-        </div>
+        
         <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
           <span class="spinner-border spinner-border-lg"></span>
         </div>
