--- a/front-end-mean/src/app/template/sidebar/sidebar.component.html
+++ b/front-end-mean/src/app/template/sidebar/sidebar.component.html
@@ -66,7 +66,7 @@
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link">
-            <i class="nav-icon fas fa-cogs"></i>
+            <i class="nav-icon fas fa-user"></i>
             <p>
               Employes
               <i class="fas fa-angle-left right"></i>
