--- a/front-end-mean/src/app/template/sidebar/sidebar.component.html
+++ b/front-end-mean/src/app/template/sidebar/sidebar.component.html
@@ -89,6 +89,31 @@
             </li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-user"></i>
+            <p>
+              Offre speciale
+              <i class="fas fa-angle-left right"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="/offre-speciale/liste" class="nav-link" routerLinkActive="active">
+                <i class="fas fa-list-ul nav-icon"></i>
+                <p>Liste</p>
+              </a>
+            </li>
+          </ul>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a routerLink="/offre-speciale/ajouter" class="nav-link" routerLinkActive="active">
+                <i class="fas fa-plus nav-icon"></i>
+                <p>Ajouter</p>
+              </a>
+            </li>
+          </ul>
+        </li>
 
       </ul>
     </nav>
