--- a/front-end-mean/src/app/pages/clients/liste-employe-favoris/liste-employe-favoris.component.html
+++ b/front-end-mean/src/app/pages/clients/liste-employe-favoris/liste-employe-favoris.component.html
@@ -1,56 +1,54 @@
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0">Dashboard</h1>
-          </div><!-- /.col -->
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v1</li>
-            </ol>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
-    </div>
-    <section class="content">
-      <div class="container-fluid">
-  
-        <h1>Service Favoris</h1>
-        <div *ngIf="!loading" >
-          <div
-          *ngFor="let value of listeEmployeFavoris">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">Service Favoris</h3>
-            </div>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-6">
-                  <p><strong>Nom:</strong>{{value.nom}}</p>
-                  <p><strong>Prénom:</strong> {{value.prenom}}</p>
-                  <p><strong>Prix:</strong> {{value.prix}}</p>
-                </div>
-                <div class="col-6">
-                    <button class="btn btn-primary">Enlever des favoris</button>
-                </div>
+  <!-- Content Header (Page header) -->
+  <div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0">Dashboard</h1>
+        </div><!-- /.col -->
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active">Dashboard v1</li>
+          </ol>
+        </div><!-- /.col -->
+      </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+  </div>
+  <section class="content">
+    <div class="container-fluid">
+      <div class="container py-5" *ngIf="!loading">
+        <h1 class="text-center">Liste des employés favoris</h1>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
+
+          <div class="col" *ngFor="let value of listeEmployeFavoris">
+            <div class="card">
+              <!-- <img src="assets/dist/img/pas_image.jpg" class="card-img-top" alt="..."> -->
+              <img src="{{ value.image_url ? (url + '/' + value.image_url) : 'assets/dist/img/pas_image.jpg' }}"
+                class="card-img-top" alt="..." style="max-width: 100%; max-height: 200px;">
+              <div class="card-body">
+                <h5 class="card-title">{{value.nom + " "+value.prenom}}</h5>
+                <p class="card-text">{{value.email}}</p>
+              </div>
+              <div class="mb-5 d-flex justify-content-around">
+                <!-- <h3>{{value.prix}}</h3> -->
+                <button class="btn btn-primary" (click)="eleverFavoris(value._id)">Enlever des favoris</button>
               </div>
             </div>
           </div>
+
         </div>
-  
-        </div>
-        <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
-          <span class="spinner-border spinner-border-lg"></span>
-        </div>
-        <!-- <div *ngIf="listeHistoriqueRendezVous.length > 0">
+      </div>
+      <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
+        <span class="spinner-border spinner-border-lg"></span>
+      </div>
+      <!-- <div *ngIf="listeHistoriqueRendezVous.length > 0">
           <app-pagination [currentPage]="pageNumber" [totalPages]="totalItems" (pageChange)="onPageChange($event)">
           </app-pagination>
         </div> -->
-  
-      </div>
-    </section>
-  </div>
+
+    </div>
+  </section>
+</div>
