--- a/front-end-mean/src/app/pages/clients/historique/historique.component.html
+++ b/front-end-mean/src/app/pages/clients/historique/historique.component.html
@@ -20,29 +20,28 @@
     <div class="container-fluid">
 
       <h1>Historique</h1>
-      <div *ngIf="!loading" >
-        <div
-        *ngFor="let value of listeHistoriqueRendezVous">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Rendez-vous</h3>
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-6">
-                <p><strong>Date et Heure:</strong>{{value.date_heure | date:'dd MMMM yyyy \'à\' HH:mm':'':'fr'}}</p>
-                <p><strong>Employé:</strong> {{value.employe_id.nom + " "+value.employe_id.prenom}}</p>
-                <p><strong>Service:</strong> {{value.service_id.nom}}</p>
-              </div>
-              <div class="col-6">
-                <p><strong>Coiffeur:</strong> ato</p>
-                <!-- <p><strong>Statut:</strong> {{value.statut}}</p>
+      <div *ngIf="!loading">
+        <div *ngFor="let value of listeHistoriqueRendezVous">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Rendez-vous</h3>
+            </div>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-6">
+                  <p><strong>Date et Heure:</strong>{{value.date_heure | date:'dd MMMM yyyy \'à\' HH:mm':'':'fr'}}</p>
+                  <p><strong>Employé:</strong> {{value.employe_id.nom + " "+value.employe_id.prenom}}</p>
+                  <p><strong>Service:</strong> {{value.service_id.nom}}</p>
+                </div>
+                <!-- <div class="col-6"> -->
+                  <!-- <p><strong>Coiffeur:</strong> ato</p> -->
+                  <!-- <p><strong>Statut:</strong> {{value.statut}}</p>
                   <p><strong>Montant:</strong> {{value.montant}}</p> -->
+                <!-- </div> -->
               </div>
             </div>
           </div>
         </div>
-      </div>
 
       </div>
       <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
