--- a/front-end-mean/src/app/pages/clients/offre-speciale/offre-speciale.component.html
+++ b/front-end-mean/src/app/pages/clients/offre-speciale/offre-speciale.component.html
@@ -1,28 +1,27 @@
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-      <div class="container-fluid">
-        <div class="row mb-2">
-          <div class="col-sm-6">
-            <h1 class="m-0">Dashboard</h1>
-          </div><!-- /.col -->
-          <div class="col-sm-6">
-            <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active">Dashboard v1</li>
-            </ol>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
-      </div><!-- /.container-fluid -->
-    </div>
-    <section class="content">
-      <div class="container-fluid">
-  
-        <h1>Offre Spéciale</h1>
-        <div *ngIf="!loading" >
-          <div
-          *ngFor="let value of listeOffreSpeciale">
+  <!-- Content Header (Page header) -->
+  <div class="content-header">
+    <div class="container-fluid">
+      <div class="row mb-2">
+        <div class="col-sm-6">
+          <h1 class="m-0">Dashboard</h1>
+        </div><!-- /.col -->
+        <div class="col-sm-6">
+          <ol class="breadcrumb float-sm-right">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active">Dashboard v1</li>
+          </ol>
+        </div><!-- /.col -->
+      </div><!-- /.row -->
+    </div><!-- /.container-fluid -->
+  </div>
+  <section class="content">
+    <div class="container-fluid">
+
+      <h1>Offre Spéciale</h1>
+      <div *ngIf="!loading">
+        <div *ngFor="let value of listeOffreSpeciale">
           <div class="card">
             <div class="card-header">
               <h3 class="card-title">{{value.nom}}</h3>
@@ -42,16 +41,16 @@
             </div>
           </div>
         </div>
-  
-        </div>
-        <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
-          <span class="spinner-border spinner-border-lg"></span>
-        </div>
-        <div *ngIf="listeOffreSpeciale.length > 0">
-          <app-pagination [currentPage]="pageNumber" [totalPages]="totalItems" (pageChange)="onPageChange($event)">
-          </app-pagination>
-        </div>
-  
+
       </div>
-    </section>
-  </div>
+      <div class="d-flex justify-content-center align-items-center" *ngIf="loading" style="height: 300px;">
+        <span class="spinner-border spinner-border-lg"></span>
+      </div>
+      <div *ngIf="listeOffreSpeciale.length > 0">
+        <app-pagination [currentPage]="pageNumber" [totalPages]="totalItems" (pageChange)="onPageChange($event)">
+        </app-pagination>
+      </div>
+
+    </div>
+  </section>
+</div>
