feat: ajouter un rdv, gestion de panier de service a prendre

--- a/front-end-mean/src/app/pages/offre-speciale/ajouter-offre-speciale/ajouter-offre-speciale.component.html
+++ b/front-end-mean/src/app/pages/offre-speciale/ajouter-offre-speciale/ajouter-offre-speciale.component.html
@@ -86,7 +86,7 @@
                   <label>{{ reductionChoisi[i] }}</label>
                 </div>
                 <div class="col-sm-3">
-                  <button class="btn btn-danger w-50" type="button" (click)="removeService(i)">Supprimer</button>
+                  <button class="btn btn-danger w-50" type="button" (click)="removeService(i)"><i class="fas fa-trash-alt" style="color: red"></i></button>
                 </div>
               </div>
             </div>
