--- a/front-end-mean/src/app/pages/offre-speciale/liste-offre-speciale/liste-offre-speciale.component.html
+++ b/front-end-mean/src/app/pages/offre-speciale/liste-offre-speciale/liste-offre-speciale.component.html
@@ -51,8 +51,8 @@
                 </ng-container>
               </td>
               <td style="width: 18%">
-                <button (click)="redirectModification(item._id)" class="btn btn-warning ml-auto">Modifier</button> |
-                <button (click)="supprimerOffreSpeciale(item._id)" class="btn btn-danger ml-auto">Supprimer</button>
+                <button (click)="redirectModification(item._id)" class="btn ml-auto"><i class="fas fa-edit"></i></button> |
+                <button (click)="supprimerOffreSpeciale(item._id)" class="btn ml-auto"><i class="fas fa-trash-alt" style="color: red"></i></button>
               </td>
             </tr>
             </tbody>
