--- a/front-end-mean/src/app/template/navbar/navbar.component.html
+++ b/front-end-mean/src/app/template/navbar/navbar.component.html
@@ -122,6 +122,13 @@
         <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
       </div> -->
     </li>
+    <li class="nav-item dropdown"  *ngIf="nbServiceAuPanier > 0">
+      <a class="nav-link" href="/rendez-vous/ajouter">
+        <i class="fas fa-cart-plus"></i>
+        <span class="badge badge-success navbar-badge blinking">{{nbServiceAuPanier}} </span>
+      </a>
+    </li>
+
     <li class="nav-item">
       <a class="nav-link" data-widget="fullscreen" href="#" role="button">
         <i class="fas fa-expand-arrows-alt"></i>
