payement en ligne

--- a/front-end-mean/src/app/pages/clients/facture/facture.component.html
+++ b/front-end-mean/src/app/pages/clients/facture/facture.component.html
@@ -35,6 +35,9 @@
                                     <ng-container *ngFor="let service of value.liste_service">
                                         <p><strong>Service:</strong> {{service.nom}}</p>
                                     </ng-container>
+                                    <ng-container *ngIf="!value.completion">
+                                        <button class="btn btn-primary" (click)="payer(value._id)">Payer</button>
+                                    </ng-container>
                                 </div>
                             </div>
                         </div>
