--- a/front-end-mean/src/app/pages/employe/liste-employe/liste-employe.component.html
+++ b/front-end-mean/src/app/pages/employe/liste-employe/liste-employe.component.html
@@ -28,6 +28,7 @@
 
         <!-- /.card-header -->
         <div class="card-body">
+          <p *ngIf="messageSucces != null" style="color: green"> {{messageSucces}} </p>
           <table  datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" id="listeEmployeTable" class="table table-bordered table-striped">
             <thead>
             <tr>
@@ -35,6 +36,8 @@
               <th>Prénom</th>
               <th>Email</th>
               <th>Username</th>
+              <th>Heure debut</th>
+              <th>Heure fin</th>
               <th>Action</th>
             </tr>
             </thead>
@@ -44,6 +47,8 @@
               <td>{{item.prenom}}</td>
               <td>{{item.email}}</td>
               <td>{{item.username}}</td>
+              <td>{{item.heure_debut.getUTCHours()}} H {{item.heure_debut.getUTCMinutes()}}</td>
+              <td>{{item.heure_fin.getUTCHours()}} H {{item.heure_fin.getUTCMinutes()}}</td>
               <td style="width: 18%">
                 <button (click)="redirectModification(item._id)" class="btn ml-auto"><i class="fas fa-edit"></i></button> |
                 <button (click)="supprimerEmploye(item._id)" class="btn ml-auto"><i class="fas fa-trash-alt" style="color: red"></i></button>
