--- a/front-end-mean/src/app/pages/rendez-vous/ajouter-au-panier/ajouter-au-panier.component.html
+++ b/front-end-mean/src/app/pages/rendez-vous/ajouter-au-panier/ajouter-au-panier.component.html
@@ -14,7 +14,7 @@
           </ol>
         </div><!-- /.col -->
       </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
+    </div>
   </div>
   <section class="content">
     <div class="container-fluid">
