--- a/front-end-mean/src/app/template/navbar/navbar.component.html
+++ b/front-end-mean/src/app/template/navbar/navbar.component.html
@@ -3,14 +3,14 @@
   <!-- Left navbar links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+      <a class="nav-link" (click)="togglePushMenu($event)" href="#" role="button"><i class="fas fa-bars"></i></a>
     </li>
-    <li class="nav-item d-none d-sm-inline-block">
+    <!-- <li class="nav-item d-none d-sm-inline-block">
       <a href="#" class="nav-link">Home</a>
     </li>
     <li class="nav-item d-none d-sm-inline-block">
       <a href="#" class="nav-link">Contact</a>
-    </li>
+    </li> -->
   </ul>
 
   <!-- Right navbar links -->
@@ -44,24 +44,24 @@
         <span class="badge badge-warning navbar-badge">{{nombreNotification}} </span>
       </a>
     </li>
-    <li class="nav-item dropdown"  *ngIf="nbServiceAuPanier > 0">
+    <li class="nav-item dropdown" *ngIf="nbServiceAuPanier > 0">
       <a class="nav-link" href="/rendez-vous/ajouter">
         <i class="fas fa-cart-plus"></i>
         <span class="badge badge-success navbar-badge blinking">{{nbServiceAuPanier}} </span>
       </a>
     </li>
     <li class="nav-item dropdown">
-      <a class="nav-link" data-toggle="dropdown" href="#">
+      <a class="nav-link" (click)="toggleDropdownMenu($event)" href="#">
         <i class="far fa-user"></i>
       </a>
-      <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+      <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right" [ngClass]="{'show': isDropdownOpen}">
         <div class="dropdown-divider"></div>
-        <button (click)="deconnexion()" class="dropdown-item dropdown-footer"><i class="fas fa-sign-out-alt"></i>Déconnection</button>
+        <button (click)="deconnexion()" class="dropdown-item dropdown-footer"><i
+            class="fas fa-sign-out-alt"></i>Déconnexion</button>
       </div>
     </li>
-
     <li class="nav-item">
-      <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+      <a class="nav-link" (click)="toggleFullscreen($event)" href="#" role="button">
         <i class="fas fa-expand-arrows-alt"></i>
       </a>
     </li>
